# nonebot-plugin-gscode

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
nonebot_plugin_gscode/: __init__.py  data_source.py
